my third commit

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,15 +1,9 @@
 body{
 	background-image: url('../img/paper_2.png');
-
-
-
-
 }
 
-
-
 h1{
-	color: red;
+	color: blue;
 	font-family: 'Roboto Condensed', sans-serif;
 	text-align: center;
 }
